[gd_scene load_steps=16 format=4 uid="uid://cerjteujuv5x1"]

[ext_resource type="PackedScene" uid="uid://k7vbjjk7f0ow" path="res://scenes/levels/base_level.tscn" id="1_2s4ok"]
[ext_resource type="Texture2D" uid="uid://bl1w071qjv41s" path="res://graphics/ground/stones.png" id="2_vo2ov"]
[ext_resource type="Script" uid="uid://d4gaqqjkya4vl" path="res://scenes/levels/outside.gd" id="2_wq65m"]
[ext_resource type="PackedScene" uid="uid://cuvyg3v5153ve" path="res://scenes/objects/gate.tscn" id="2_x73sx"]
[ext_resource type="Texture2D" uid="uid://c6hg4dy66xbpg" path="res://graphics/decals/moss/moss_1.png" id="3_ti38e"]
[ext_resource type="TileSet" uid="uid://c7u1fs05tv8x7" path="res://scenes/levels/level.tres" id="3_tn0yi"]
[ext_resource type="Texture2D" uid="uid://b72j8kxesy5wx" path="res://graphics/decals/moss/moss_3.png" id="4_tn0yi"]
[ext_resource type="PackedScene" uid="uid://ditdu2td1u8xa" path="res://scenes/items/item.tscn" id="4_xqqjy"]
[ext_resource type="Texture2D" uid="uid://bcvgbmoolrhu6" path="res://graphics/decals/moss/moss_4.png" id="5_xorrk"]
[ext_resource type="PackedScene" uid="uid://0mm6mgomt3fd" path="res://scenes/objects/steam_vent.tscn" id="6_wq65m"]
[ext_resource type="PackedScene" uid="uid://7fssx8jaj5ab" path="res://scenes/levels/house.tscn" id="7_qvsb0"]
[ext_resource type="PackedScene" uid="uid://dr3x7rf77f6cw" path="res://scenes/objects/box.tscn" id="7_xqqjy"]
[ext_resource type="PackedScene" uid="uid://d4enksvcycwcv" path="res://scenes/objects/light_fan_animation.tscn" id="9_tn0yi"]
[ext_resource type="PackedScene" uid="uid://cfefvdp4of3lp" path="res://scenes/enemies/drone.tscn" id="10_xorrk"]
[ext_resource type="PackedScene" uid="uid://d4j24613kjcce" path="res://scenes/enemies/scout.tscn" id="14_ex6t8"]

[node name="Outside" instance=ExtResource("1_2s4ok")]
script = ExtResource("2_wq65m")

[node name="Stones" type="Sprite2D" parent="Ground" index="0"]
texture_repeat = 2
position = Vector2(356, 2135.45)
scale = Vector2(0.995763, 1.13674)
texture = ExtResource("2_vo2ov")
region_enabled = true
region_rect = Rect2(-17362.6, -520.618, 16000, 10000)

[node name="Decoration" type="Sprite2D" parent="Ground" index="1"]
position = Vector2(-492, 728)
texture = ExtResource("3_ti38e")

[node name="Moss1" type="Sprite2D" parent="Ground/Decoration" index="0"]
position = Vector2(2710, -143)
rotation = -0.42247
texture = ExtResource("3_ti38e")

[node name="Moss3" type="Sprite2D" parent="Ground/Decoration" index="1"]
position = Vector2(2558, 254)
rotation = 2.67759
texture = ExtResource("4_tn0yi")

[node name="Moss4" type="Sprite2D" parent="Ground/Decoration" index="2"]
position = Vector2(-653, 333)
rotation = -0.891765
scale = Vector2(1, 1.16)
texture = ExtResource("5_xorrk")

[node name="Box" parent="Ground/Decoration" index="3" instance=ExtResource("7_xqqjy")]
position = Vector2(-1063, 335.717)
rotation = -2.61799
collision_layer = 1
collision_mask = 1

[node name="Box2" parent="Ground/Decoration" index="4" instance=ExtResource("7_xqqjy")]
position = Vector2(3634, -1110.62)
rotation = -4.71238
collision_layer = 1
collision_mask = 1

[node name="Box3" parent="Ground/Decoration" index="5" instance=ExtResource("7_xqqjy")]
position = Vector2(3634, -1497.24)
rotation = -4.45058
collision_layer = 1
collision_mask = 1

[node name="Box4" parent="Ground/Decoration" index="6" instance=ExtResource("7_xqqjy")]
position = Vector2(3638, -1297.92)
rotation = -4.97418
collision_layer = 1
collision_mask = 1

[node name="SoilMap" type="TileMapLayer" parent="Ground" index="2"]
position = Vector2(880, -328)
tile_map_data = PackedByteArray("AAD4/wQAAAABAAIAAAAHAAQAAQACAAIAAAD4/wAAAQABAAEAAAD4/wEAAQABAAEAAAD4/wIAAQABAAEAAAD4/wMAAQABAAEAAAAHAAAAAQABAAEAAAAHAAEAAQAAAAEAAAAHAAIAAQAAAAEAAAAHAAMAAQABAAEAAAADAP3/AAABAAAAAAAEAP3/AQABAAIAAAAFAP3/AQABAAIAAAAGAP3/AQABAAEAAAAGAAAAAQAAAAIAAAAGAP7/AQAAAAEAAAAGAP//AQAAAAEAAAAGAAQAAQACAAIAAAD5////AAACAAIAAAD5//7/AAAAAAIAAAD5//3/AAABAAEAAAD4////AAABAAEAAAD6//3/AAABAAAAAAD7//3/AAABAAAAAAD8//3/AAABAAAAAAD6/wAAAQAAAAAAAAD7/wAAAQABAAAAAAD6/wEAAQAAAAIAAAD7/wEAAQACAAIAAAAEAAMAAQAAAAAAAAAFAAMAAQABAAAAAAAGAAIAAQACAAAAAAAFAAIAAQAAAAAAAAAGAAMAAQABAAEAAAAFAAQAAQABAAEAAAAEAAQAAQAAAAIAAAD1/wQAAQABAAAAAAD0/wQAAQAAAAAAAAD0/wUAAQAAAAEAAAD1/wUAAQABAAEAAADw/wIAAQAAAAAAAADw/wMAAQAAAAEAAADw/wQAAQAAAAIAAADx/wIAAQABAAAAAADx/wMAAQABAAEAAADx/wQAAQABAAIAAADw/wUAAQAAAAAAAADx/wUAAQABAAAAAADw/wYAAQAAAAEAAADw/wcAAQAAAAIAAADx/wYAAQABAAEAAADx/wcAAQABAAIAAADv/wMAAQAAAAAAAADv/wQAAQAAAAAAAADv/wUAAQAAAAIAAADz/wQAAQACAAAAAADy/wQAAQACAAAAAAA=")
tile_set = ExtResource("3_tn0yi")
metadata/_edit_lock_ = true

[node name="WallMap" type="TileMapLayer" parent="Ground" index="3"]
position = Vector2(887, -328)
tile_map_data = PackedByteArray("AAD4/wQAAAABAAIAAAAHAAQAAAACAAIAAAD4/wAAAAAAAAIAAAD4/wEAAAAAAAIAAAD4/wIAAAAAAAIAAAD4/wMAAAAAAAIAAAAHAAAAAAACAAEAAAAHAAEAAAAAAAIAAAAHAAIAAAAAAAIAAAAHAAMAAAAAAAIAAAADAP3/AAABAAAAAAAEAP3/AAABAAAAAAAFAP3/AAABAAAAAAAGAP3/AAACAAEAAAAGAAAAAAABAAIAAAAGAP7/AAAAAAIAAAAGAP//AAAAAAIAAAAFAAQAAAABAAAAAAAGAAQAAAABAAAAAAD5////AAACAAIAAAD5//7/AAAAAAIAAAD5//3/AAABAAEAAAD4////AAABAAEAAAD6//3/AAABAAAAAAD7//3/AAABAAAAAAD8//3/AAABAAAAAAD6/wAAAQAAAAAAAAD7/wAAAQABAAAAAAD6/wEAAQAAAAIAAAD7/wEAAQACAAIAAAD5/wQAAAABAAAAAAD6/wQAAAABAAAAAAD7/wQAAAABAAAAAAD8/wQAAAABAAAAAAD9/wQAAAABAAAAAAD+/wQAAAABAAAAAAADAAQAAAABAAAAAAAEAAQAAAABAAAAAAA=")
tile_set = ExtResource("3_tn0yi")
metadata/_edit_lock_ = true

[node name="SteamVent" parent="Ground" index="4" instance=ExtResource("6_wq65m")]
position = Vector2(-792, 2946)

[node name="House" parent="Ground" index="5" instance=ExtResource("7_qvsb0")]
position = Vector2(4363, 2987)
rotation = 1.57821

[node name="LightFanAnimation" parent="Ground" index="6" instance=ExtResource("9_tn0yi")]
position = Vector2(4738, 2320.27)
scale = Vector2(0.507558, 0.507558)
autoplay = "default"
frame_progress = 0.0637899

[node name="Drone" parent="." index="2" instance=ExtResource("10_xorrk")]
position = Vector2(4006.61, 2898.3)
scale = Vector2(0.507558, 0.507558)

[node name="Gate" parent="." index="3" instance=ExtResource("2_x73sx")]

[node name="Scout" parent="Enemies" index="0" instance=ExtResource("14_ex6t8")]
position = Vector2(329, 1093.77)

[node name="Scout2" parent="Enemies" index="1" instance=ExtResource("14_ex6t8")]
position = Vector2(137, 874.411)
rotation = -3.06453

[node name="Scout3" parent="Enemies" index="2" instance=ExtResource("14_ex6t8")]
position = Vector2(608.396, 796.693)
rotation = -0.62574

[node name="Item" parent="Items" index="0" instance=ExtResource("4_xqqjy")]
position = Vector2(2860.32, -187.785)
scale = Vector2(0.995763, 1.13674)

[connection signal="player_entered" from="Ground/House" to="." method="_on_house_player_entered"]
[connection signal="player_exited" from="Ground/House" to="." method="_on_house_player_exited"]
[connection signal="body_gate_entered" from="Gate" to="." method="_on_gate_body_gate_entered"]
[connection signal="body_gate_exited" from="Gate" to="." method="_on_gate_body_gate_exited"]
